prefix views by swagger to avoid name conflicts

--- a/app/_includes/swagger-schema-partial.html
+++ b/app/_includes/swagger-schema-partial.html
@@ -11,27 +11,27 @@
     [[/if]]
 
     [[#if this.type.isString]]
-        [[> schema-type-string ..]]
+        [[> swagger-schema-type-string ..]]
     [[/if]]
     [[#if this.type.isRef]]
-        [[> schema-type-ref ..]]
+        [[> swagger-schema-type-ref ..]]
     [[/if]]
     [[#if this.type.isOneOf]]
-        [[> schema-type-one-of ..]]
+        [[> swagger-schema-type-one-of ..]]
     [[/if]]
     [[#if this.type.isAnyOf]]
-        [[> schema-type-any-of ..]]
+        [[> swagger-schema-type-any-of ..]]
     [[/if]]
     [[#if this.type.isArray]]
-        [[> schema-type-array ..]]
+        [[> swagger-schema-type-array ..]]
     [[/if]]
     [[#if this.type.isObject]]
-        [[> schema-type-object ..]]
+        [[> swagger-schema-type-object ..]]
     [[/if]]
     [[#if this.type.isNumber]]
-        [[> schema-type-number ..]]
+        [[> swagger-schema-type-number ..]]
     [[/if]]
     [[#if this.type.isInteger]]
-        [[> schema-type-number ..]]
+        [[> swagger-schema-type-number ..]]
     [[/if]]
 </div>
