--- a/app/_includes/swagger-schema-type-any-of.html
+++ b/app/_includes/swagger-schema-type-any-of.html
@@ -2,7 +2,7 @@
     <ul>
         [[#each schema.types]]
         <li>
-            [[> schema-partial this]]
+            [[> swagger-schema-partial this]]
         </li>
         [[/each]]
     </ul>
