--- a/app/_includes/swagger-schema-type-array.html
+++ b/app/_includes/swagger-schema-type-array.html
@@ -1,6 +1,6 @@
 <div>
     <span class="mono bold">Items: </span>
     <span>
-        [[> schema-partial this.itemsType]]
+        [[> swagger-schema-partial this.itemsType]]
     </span>
 </div>
