--- a/app/_includes/swagger-schema-type-object.html
+++ b/app/_includes/swagger-schema-type-object.html
@@ -11,7 +11,7 @@
                 </span>:&nbsp;
             [[property]]
 
-            [[> schema-partial this.schema]]
+            [[> swagger-schema-partial this.schema]]
         </li>
         [[/each]]
     </ul>
